added colour and animation to the index page. corrections function for admins, mudblazor md

--- a/MedbaseBlazor.csproj
+++ b/MedbaseBlazor.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="Markdig" Version="0.31.0" />
     <PackageReference Include="MudBlazor" Version="6.6.0" />
+    <PackageReference Include="MudBlazor.Markdown" Version="0.1.1" />
   </ItemGroup>
 
 </Project>
