--- a/MedbaseBlazor.csproj
+++ b/MedbaseBlazor.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="MudBlazor.Markdown" Version="0.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MedbaseLibrary\MedbaseLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
