--- a/MedbaseBlazor.csproj
+++ b/MedbaseBlazor.csproj
@@ -14,13 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Markdig" Version="0.31.0" />
-    <PackageReference Include="MudBlazor" Version="6.6.0" />
-    <PackageReference Include="MudBlazor.Markdown" Version="0.1.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\MedbaseLibrary\MedbaseLibrary.csproj" />
+    <PackageReference Include="Markdig" Version="0.35.0" />
+    <PackageReference Include="Medbase.MedbaseLibrary" Version="1.0.0" />
+    <PackageReference Include="MudBlazor" Version="6.17.0" />
+    <PackageReference Include="MudBlazor.Markdown" Version="0.1.3" />
   </ItemGroup>
 
 </Project>
