--- a/MedbaseBlazor.csproj
+++ b/MedbaseBlazor.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="changelog.md" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="Pages\Error.cshtml" />
     <None Include="Pages\_Host.cshtml" />
   </ItemGroup>
