--- a/MedbaseBlazor.csproj
+++ b/MedbaseBlazor.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Medbase.MedbaseLibrary" Version="1.0.0" />
     <PackageReference Include="MudBlazor" Version="6.17.0" />
     <PackageReference Include="MudBlazor.Markdown" Version="0.1.3" />
+    <PackageReference Include="Sentry.AspNetCore" Version="4.1.2" />
   </ItemGroup>
 
 </Project>
