--- a/MedbaseBlazor.csproj
+++ b/MedbaseBlazor.csproj
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <PackageReference Include="Markdig" Version="0.35.0" />
-    <PackageReference Include="Medbase.MedbaseLibrary" Version="1.0.1" />
+    <PackageReference Include="Medbase.MedbaseLibrary" Version="1.0.2-alpha" />
     <PackageReference Include="MudBlazor" Version="6.17.0" />
     <PackageReference Include="MudBlazor.Markdown" Version="0.1.3" />
     <PackageReference Include="Sentry.AspNetCore" Version="4.1.2" />
