--- a/MedbaseBlazor.csproj
+++ b/MedbaseBlazor.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-MedbaseBlazor-3dd7775b-4447-4a6f-a6ae-1d7d86fa2dc5</UserSecretsId>
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="Markdig" Version="0.35.0" />
     <PackageReference Include="Medbase.MedbaseLibrary" Version="1.0.2-alpha" />
+    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="8.0.2" />
     <PackageReference Include="MudBlazor" Version="6.17.0" />
     <PackageReference Include="MudBlazor.Markdown" Version="0.1.3" />
     <PackageReference Include="Sentry.AspNetCore" Version="4.1.2" />
