abstracted common views into new Medbase Components library

--- a/MedbaseBlazor.csproj
+++ b/MedbaseBlazor.csproj
@@ -21,7 +21,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MedbaseLibrary\MedbaseLibrary.csproj" />
+    <ProjectReference Include="..\MedbaseComponents\MedbaseComponents.csproj" />
+    <ProjectReference Include="..\MedbaseComponents\MedbaseComponents.csproj" />
   </ItemGroup>
 
 </Project>
