well, sign in and up with JWT carrying claims is now working-ish

--- a/MedbaseBlazor.csproj
+++ b/MedbaseBlazor.csproj
@@ -18,12 +18,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
     <PackageReference Include="Markdig" Version="0.35.0" />
     <PackageReference Include="Microsoft.Identity.Client" Version="4.59.0" />
     <PackageReference Include="MudBlazor" Version="6.6.0" />
     <PackageReference Include="MudBlazor.Markdown" Version="0.1.1" />
     <PackageReference Include="PSC.Blazor.Components.MarkdownEditor" Version="2.0.19" />
     <PackageReference Include="Sentry.AspNetCore" Version="4.1.2" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.5.0" />
   </ItemGroup>
 
   <ItemGroup>
