--- a/MedbaseBlazor.csproj
+++ b/MedbaseBlazor.csproj
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <PackageReference Include="Markdig" Version="0.35.0" />
-    <PackageReference Include="Microsoft.Identity.Client" Version="4.60.3" />
+    <PackageReference Include="MedbaseComponents" Version="1.0.3" />
     <PackageReference Include="MudBlazor" Version="6.6.0" />
     <PackageReference Include="MudBlazor.Markdown" Version="0.1.1" />
     <PackageReference Include="PSC.Blazor.Components.MarkdownEditor" Version="2.0.19" />
