--- a/MedbaseBlazor.csproj
+++ b/MedbaseBlazor.csproj
@@ -18,12 +18,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Markdig" Version="0.35.0" />
-    <PackageReference Include="MedbaseComponents" Version="1.0.3" />
-    <PackageReference Include="MudBlazor" Version="6.6.0" />
-    <PackageReference Include="MudBlazor.Markdown" Version="0.1.1" />
-    <PackageReference Include="PSC.Blazor.Components.MarkdownEditor" Version="2.0.19" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.5.0" />
+    <PackageReference Include="Markdig" Version="0.37.0" />
+    <PackageReference Include="MudBlazor" Version="6.19.1" />
+    <PackageReference Include="MudBlazor.Markdown" Version="0.1.3" />
+    <PackageReference Include="PSC.Blazor.Components.MarkdownEditor" Version="8.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.5.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MedbaseComponents\MedbaseComponents.csproj" />
+    <ProjectReference Include="..\MedbaseLibrary\MedbaseLibrary.csproj" />
   </ItemGroup>
 
 </Project>
