--- a/MedbaseBlazor.csproj
+++ b/MedbaseBlazor.csproj
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <PackageReference Include="Markdig" Version="0.37.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
     <PackageReference Include="MudBlazor" Version="6.19.1" />
     <PackageReference Include="MudBlazor.Markdown" Version="0.1.3" />
     <PackageReference Include="PSC.Blazor.Components.MarkdownEditor" Version="8.0.0" />
