--- a/MedbaseBlazor.csproj
+++ b/MedbaseBlazor.csproj
@@ -19,11 +19,20 @@
 
   <ItemGroup>
     <PackageReference Include="Markdig" Version="0.37.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.4" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="2.17.5" />
+    <PackageReference Include="Microsoft.Identity.Web.UI" Version="2.17.5" />
     <PackageReference Include="MudBlazor" Version="6.19.1" />
     <PackageReference Include="MudBlazor.Markdown" Version="0.1.3" />
     <PackageReference Include="PSC.Blazor.Components.MarkdownEditor" Version="8.0.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.5.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MedbaseComponents\MedbaseComponents.csproj" />
+    <ProjectReference Include="..\MedbaseLibrary\MedbaseLibrary.csproj" />
   </ItemGroup>
 
 </Project>
