--- a/appsettings.json
+++ b/appsettings.json
@@ -3,7 +3,9 @@
     "ClientId": "4f63e9d9-9f26-4858-af01-6d14cd772141",
     "Tenant": "authmedbase.onmicrosoft.com",
     "TenantId": "87e07b82-5682-44a7-bae6-2c33ca463598",
+    "CallbackPath": "/signin-oidc",
     "InstanceUrl": "https://authmedbase.b2clogin.com",
+    "ClientSecret": "Kdi8Q~KuUYI2XJpSBATxgqWPaGlBKeAgpONwJauW",
     "PolicySignUpSignIn": "b2c_1_social_susi",
     "Authority": "https://authmedbase.b2clogin.com/tfp/authmedbase.onmicrosoft.com/b2c_1_social_susi",
     "Scopes": [
