--- a/appsettings.json
+++ b/appsettings.json
@@ -1,16 +1,12 @@
 {
   "Settings": {
     "ClientId": "4f63e9d9-9f26-4858-af01-6d14cd772141",
-    "Tenant": "authmedbase.onmicrosoft.com",
-    "TenantId": "87e07b82-5682-44a7-bae6-2c33ca463598",
-    "CallbackPath": "signin-oidc",
-    "InstanceUrl": "https://authmedbase.b2clogin.com",
-    "ClientSecret": "Kdi8Q~KuUYI2XJpSBATxgqWPaGlBKeAgpONwJauW",
-    "PolicySignUpSignIn": "b2c_1_social_susi",
-    "Authority": "https://authmedbase.b2clogin.com/tfp/authmedbase.onmicrosoft.com/b2c_1_social_susi",
-    "Scopes": [
-      { "Value": "https://authmedbase.onmicrosoft.com/4f63e9d9-9f26-4858-af01-6d14cd772141/access_as_user" }
-    ],
+    "Domain": "authmedbase.onmicrosoft.com",
+    "Instance": "https://authmedbase.b2clogin.com",
+    "SignedOutCallbackPath": "/signout/B2C_1_susi",
+    "SignUpSignInPolicyId": "b2c_1_social_susi",
+    "ResetPasswordPolicyId": "b2c_1_reset",
+    "EditProfilePolicyId": "b2c_1_edit_profile",
     "ApiUrl": "http://apimedbase.azurewebsites.net/"
   },
   "Logging": {
