--- a/appsettings.json
+++ b/appsettings.json
@@ -1,23 +1,13 @@
 ﻿{
-  "Settings": {
-    "ClientId": "4f63e9d9-9f26-4858-af01-6d14cd772141",
-    "Tenant": "authmedbase.onmicrosoft.com",
-    "TenantId": "87e07b82-5682-44a7-bae6-2c33ca463598",
-    "CallbackPath": "/signin-oidc",
-    "InstanceUrl": "https://authmedbase.b2clogin.com",
-    "PolicySignUpSignIn": "b2c_1_social_susi",
-    "Authority": "https://authmedbase.b2clogin.com/tfp/authmedbase.onmicrosoft.com/b2c_1_social_susi",
-    "Scopes": [
-      {
-        "Value": "https://authmedbase.onmicrosoft.com/4f63e9d9-9f26-4858-af01-6d14cd772141/access_as_user"
-      }
-    ]
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth0": {
+    "Domain": "dev-nema48ewf82jkozq.us.auth0.com",
+    "ClientId": "TKxzigQblSo6CGEh0rUK5Jbq2pqY96au"
+  }
 }
