added new analytics tags, tried to fix auth. Couldn't get anywhere

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,8 @@
   "AllowedHosts": "*",
   "Auth0": {
     "Domain": "dev-nema48ewf82jkozq.us.auth0.com",
-    "ClientId": "TKxzigQblSo6CGEh0rUK5Jbq2pqY96au"
+    "ClientId": "TKxzigQblSo6CGEh0rUK5Jbq2pqY96au",
+    "CallbackPath": "/callback",
+    "RedirectUri": "https://app.medbase.co.zw/callback"
   }
 }
