--- a/MedbaseBlazor.csproj
+++ b/MedbaseBlazor.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-MedbaseBlazor-3dd7775b-4447-4a6f-a6ae-1d7d86fa2dc5</UserSecretsId>
@@ -13,19 +13,14 @@
 	</PropertyGroup>
 
   <ItemGroup>
-    <None Include="Pages\Error.cshtml" />
-    <None Include="Pages\App.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Markdig" Version="0.37.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
-    <PackageReference Include="Microsoft.Identity.Web" Version="3.0.0" />
-    <PackageReference Include="Microsoft.Identity.Web.UI" Version="3.0.0" />
-    <PackageReference Include="MudBlazor" Version="7.3.0" />
-    <PackageReference Include="MudBlazor.Markdown" Version="1.0.2" />
-    <PackageReference Include="PSC.Blazor.Components.MarkdownEditor" Version="8.0.4" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.0" />
+    <PackageReference Include="Auth0.AspNetCore.Authentication" Version="1.4.1" />
+    <PackageReference Include="Markdig" Version="0.38.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="3.4.0" />
+    <PackageReference Include="Microsoft.Identity.Web.UI" Version="3.4.0" />
+    <PackageReference Include="MudBlazor" Version="7.15.0" />
+    <PackageReference Include="MudBlazor.Markdown" Version="7.14.0" />
+    <PackageReference Include="PSC.Blazor.Components.MarkdownEditor" Version="8.0.5" />
   </ItemGroup>
 
   <ItemGroup>
