--- a/MedbaseBlazor.csproj
+++ b/MedbaseBlazor.csproj
@@ -15,15 +15,13 @@
   <ItemGroup>
     <PackageReference Include="Auth0.AspNetCore.Authentication" Version="1.4.1" />
     <PackageReference Include="Markdig" Version="0.38.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
-    <PackageReference Include="Microsoft.Identity.Web" Version="3.4.0" />
-    <PackageReference Include="Microsoft.Identity.Web.UI" Version="3.4.0" />
     <PackageReference Include="MudBlazor" Version="7.15.0" />
     <PackageReference Include="MudBlazor.Markdown" Version="7.14.0" />
     <PackageReference Include="PSC.Blazor.Components.MarkdownEditor" Version="8.0.5" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Medbase.Application\Medbase.Application.csproj" />
     <ProjectReference Include="..\MedbaseComponents\MedbaseComponents.csproj" />
     <ProjectReference Include="..\MedbaseLibrary\MedbaseLibrary.csproj" />
   </ItemGroup>
