course selection now works

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "Auth0": {
-    "Domain": "https://dev-nema48ewf82jkozq.us.auth0.com",
-    "ClientId": "TKxzigQblSo6CGEh0rUK5Jbq2pqY96au"
+    "Domain": "dev-nema48ewf82jkozq.us.auth0.com",
+    "ClientId": "SV2oPTp0BKEnP7wAR1UT6Kk5CQAPq5Nu"
   },
   "Logging": {
     "LogLevel": {
@@ -11,7 +11,7 @@
   },
   "AllowedHosts": "*",
   "Endpoints": {
-    "Local": "http://localhost:5127/",
+    "Local": "http://localhost:5249/",
     "Online": "https://apimedbase.azurewebsites.net/"
   }
 }
